# Springbok

./: .gitignore  CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  FACTS.md  README.md  README.md~  Springbok  build_emscripten.sh  generate2.sh  generate_clang.sh  generate_emscripten.sh  generate_emscripten_release.sh
MyExamples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  main.cpp
Source/: AssetSystem.h  CMakeLists.txt  Core.h  Graphics.h  Math.h  Resources.h
Source/Animation/: CMakeLists.txt  Easing.h  Interpolation.h  KeyframeList.h  KeyframeList_Examples.cpp  KeyframeList_Templates.hpp  KeyframeList_Tests.cpp
Source/AssetSystem/: AssetManager.cpp  AssetManager.h  AssetManager_Template.hpp  CMakeLists.txt
Source/Audio/: CMakeLists.txt  README.md  SoundInstance.cpp  SoundInstance.h  SoundManager.cpp  SoundManager.h  SoundSample.cpp  SoundSample.h  SoundSource.cpp  SoundSource.h
Source/Containers/: Associative.h  CMakeLists.txt  List.h  List_Examples.cpp  List_Templates.hpp  MemorySubrange.h  SimpleList.h  SimpleList_Examples.cpp  VertexArray.h  View.h  View_Examples.cpp  View_Templates.hpp
Source/Core/: CMakeLists.txt
Source/Dependencies/: CMakeLists.txt  stb_vorbis.c
Source/Generic/: CMakeLists.txt  LogicChain.h  LogicChain_Templates.hpp  ObjectPointer.cpp  ObjectPointer.h  ObjectPointer_Examples.cpp  ObjectPointer_Templates.hpp  ObjectPointer_Tests.cpp  PointerGuard.h
Source/Geometry/: .DetectionAlgorithms.cpp.kate-swp  Angle.cpp  Angle.h  Angle_Tests.cpp  Angle_constexpr.h  BoundingShapes.cpp  BoundingShapes.h  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  GeometryView.h  GeometryView_Templates.hpp  GeometryView_Tests.cpp  Line2.h  README.md  Rect.h  Rect_Templates.hpp  TexRect.h  TexRect_Templates.hpp  Vec2.h  Vec2_Templates.hpp  Vec2_Tests.cpp  Vec3.h  Vec3_Templates.hpp  Vec4.h
Source/Graphics/: BitmapFont.cpp  BitmapFont.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Color.md  ColorPalette.cpp  ColorPalette.h  GLTypes.h  GraphicsBatch.cpp  GraphicsBatch.h  Image.cpp  Image.h  RenderContext.cpp  RenderContext.h  RenderManager.cpp  RenderManager.h  RenderParameters.cpp  RenderParameters.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Source/Math/: CMakeLists.txt  Operations.h  Operations_Tests.cpp  Radian.cpp  Radian.h  Range.h  Range_Templates.hpp  Range_Tests.cpp
Source/Parsing/: CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  ConfigFile_Sample.scnf  ConfigFile_Tests.cpp  StringParser.cpp  StringParser.h  StringParser_Tests.cpp  UTF8.cpp  UTF8.h  UTF8Decoder.cpp  UTF8Decoder.h  UTF8Decoder_Tests.cpp  UTF8_Templates.hpp  UTF8_Tests.cpp  Unicode.h
Source/Platform/: ButtonPressEvent.cpp  ButtonPressEvent.h  CMakeLists.txt  FileInfo.cpp  GameSurface.h  InputDevice.cpp  InputDevice.h  InputMonitor.h  PreciseClock.h
Source/Procedural/: CMakeLists.txt  Noise.cpp  Noise.h  README.md  REFERENCE.md  RandomNumberGenerator.cpp  RandomNumberGenerator.h
Source/Resources/: CMakeLists.txt  ResourceManager.h  ResourceManager_Templates.hpp
Source/Utils/: CMakeLists.txt  CliArgumentParser.cpp  CliArgumentParser.h  CliArgumentParser_Test.cpp  Debug.cpp  Debug.h
Springbok/: Animation.h  Animation.hpp  Audio.h  Audio.hpp  CMakeLists.txt  Config.h.in  Containers.hpp  Dependencies.hpp  Experimental.hpp  Foundation.hpp  Generic.hpp  Geometry.hpp  Graphics.h  Graphics.hpp  Math.hpp  Parsing.hpp  Platform.h  Platform.hpp  Procedural.hpp  Resources.hpp  Serialization.hpp  Shapes.hpp  Types.hpp  Utils.hpp  World.hpp  header2md.py
Springbok/Animation/: CMakeLists.txt  Easing.h  Interpolation.h  KeyframeList.h  KeyframeList_Templates.hpp  README.md
Springbok/Audio/: CMakeLists.txt  SoundInstance.h  SoundManager.cpp  SoundManager.h  SoundSample.cpp  SoundSample.h  SoundSource.cpp  SoundSource.h
Springbok/Containers/: CMakeLists.txt  List.h  List_Templates.hpp  List_Tests.cpp  MemorySubrange.h  View.h  View_Templates.hpp  View_Tests.cpp
Springbok/Dependencies/: CMakeLists.txt  lodepng.cpp  lodepng.h  lodepng_config.cpp  lodepng_config.h  stb_vorbis.c  stb_vorbis.h  stb_vorbis_config.cpp  stb_vorbis_config.h
Springbok/Experimental/: CMakeLists.txt  Noise.cpp  Noise.h  TileMapIterator.h
Springbok/Foundation/: Angle.cpp  Angle.h  Angle_Tests.cpp  Angle_constexpr.h  CMakeLists.txt  DataBlock.h  DataBlock_Templates.hpp  MemoryBlock.cpp  MemoryBlock.h  MemoryPool.cpp  MemoryPool.h  ObjectPointer.cpp  ObjectPointer_Templates.hpp  Path.cpp  Path.h  ResourceManager.cpp  ResourceManager.h  ResourceManager_Templates.hpp  Vec2.h  Vec2_Extra.h  Vec2_Templates.hpp  Vec2_Tests.cpp  Vec3_Templates.hpp  Vec4.h  Vec4_Templates.hpp
Springbok/Generic/: CMakeLists.txt  Logic.h  Logic_Implementation.hpp  ObjectPointer_Templates.hpp  ObjectPointer_Tests.cpp  README.md
Springbok/Geometry/: Angle_Tests.cpp  Angle_constexpr.h  BoundingShapes.h  BoundingShapes_Tests.cpp  CMakeLists.txt  GeometryView.h  Line2_Templates.hpp  Rect.h  Rect_Templates.hpp  Vec2.h  Vec2_Templates.hpp  Vec3.h  Vec3_Templates.hpp  Vec4.h  Vec4_Templates.hpp
Springbok/Graphics/: BatchRenderer.h  BatchRenderer_Templates.hpp  BitmapFont.cpp  BitmapFont.h  CMakeLists.txt  Color.cpp  Color.h  Framebuffer.cpp  Framebuffer.h  GLES2.cpp  GLES2.h  GraphicsBatch.cpp  Image.cpp  Image.h  LineShape.cpp  LineShape.h  LineShape_Templates.hpp  ProxyRender.h  RenderContext.cpp  RenderContext.h  RenderContext2D.cpp  RenderContext2D.h  RenderContext2D_Templates.hpp  RenderTarget.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  SpriteRenderer.cpp  SpriteRenderer.h  SpriteRenderer_Templates.hpp  Texture.cpp  Transform2D.cpp  Transform2D.h  Transform2D_Templates.hpp  VertexArray.h  VertexStruct.cpp  VertexStruct.h
Springbok/Math/: CMakeLists.txt  Operations.h  Operations_Tests.cpp  Range_Tests.cpp
Springbok/Parsing/: CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  ConfigFile_Tests.cpp  StringParser.cpp  StringParser.h  StringParser_Templates.hpp  StringParser_Tests.cpp  UTF8.cpp  UTF8.h  UTF8_Templates.hpp  UTF8_Tests.cpp  Utils.h
Springbok/Platform/: ButtonPressEvent.cpp  (+11 more)
(+155 files in other folders)
